fix: minor fix when run from cmdline [ci skip]